--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -332,7 +332,7 @@
             left: 175px;
             top: 23px;
             font-size: 18px;
-            z-index: 1000;
+            z-index: 10;
         }
         &-triangleSort {
             position: absolute;
@@ -340,7 +340,7 @@
             right: 7px;
             color: $d-text-color;
             font-size: 18px;
-            z-index: 1000;
+            z-index: 10;
         }
         &-db {
             display: block;
@@ -348,7 +348,7 @@
             top: -40px;
             left: 0;
             color: $d-text-color;
-            z-index: 100;
+            z-index: 10;
         }
         &-srt {
             display: block;
@@ -356,7 +356,7 @@
             top: -40px;
             left: 10px;
             color: $d-text-color;
-            z-index: 100;
+            z-index: 10;
         }
     }
     &__search {
@@ -421,6 +421,7 @@
 }
 .tbody {
     width: 100%;
+    min-height: 315px;
     &__tr {
         display: flex;
         align-items: center;
@@ -458,7 +459,7 @@
     left: 0;
     visibility: visible;
     transition: transform .4s ease;
-    z-index: 10;
+    z-index: 100;
     &__container {
         width: 590px;
         height: auto;
@@ -600,7 +601,7 @@
     left: 0;
     visibility: visible;
     transition: transform .4s ease;
-    z-index: 10;
+    z-index: 100;
     &__container {
         width: 600px; 
         height: auto; 
