--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -56,7 +56,7 @@
         border: 1px solid #1a1a1a;
         background: $d-table-td;
         font-weight: 400;
-        overflow: auto;
+        overflow-y: hidden;
         text-align: center;
         padding: 12px 7px;
         &:nth-child(3) {
