--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -20,6 +20,7 @@ $d-table-nav: #5c5c0d;
 $d-table-td: #ffffb5;
 $d-modal-bg: rgba(26, 26, 26, 0.9);
 $d-clearAll: rgb(182, 1, 1);
+$d-error: red;
 
 $l-main-page-bg: rgb(255, 255, 235);
 $l-header-bg: #ffb179;
