--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -9,6 +9,9 @@
     width: 999px;
     margin: 0 auto;
 }
+.hide {
+    display: none;
+}
 
 $d-main-page-bg: rgb(26, 26, 26);
 $d-border-color: rgb(26, 26, 26);
