--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -231,6 +231,13 @@
             }
         }
     }
+
+    &__status{
+        align-self: center;
+        img{
+            width: 55px;
+        }
+    }
 }
 .table {
     display: table;
@@ -929,4 +936,12 @@
     color: $d-error;
     bottom: -20px;
     font-size: 14px;
+}
+
+.hideSpinner{
+    display: none;
+}
+
+.showSpinner{
+    display: inline;
 }
