--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -240,7 +240,8 @@
     }
     &__msstatus{
         position: absolute;
-        width: 100%;
+        width: 150%;
+        text-align: right;
         right: -5px;
         bottom: -28px;
         font-size: 21px;
