--- a/src/front/scss/req.scss
+++ b/src/front/scss/req.scss
@@ -86,7 +86,7 @@ body{
     }
     &__valid{
         margin: 10px 0 20px 0;
-        color: #fff;
+        color: #ccc;
     }
     &__btn{
         width: 100%;
