--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -947,6 +947,12 @@
     bottom: -20px;
     font-size: 14px;
 }
+.input-error-company {
+    position: absolute;
+    color: $d-error;
+    bottom: -20px;
+    font-size: 14px;
+}
 .hideSpinner{
     display: none;
 }
